2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/gtk/dialogs.py:
	Update the list of authors.

2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/muxers/multipart.py:
	Add warnings about multipart deficiency in gst-plugins-good up to
	0.10.17.
	Closes #1342.

2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/encoders/mulaw/mulaw.py:
	Force mulaw to be 8000 Hz mono.
	We only support mulaw in multipart and RFC2046 mandates the audio/basic
	content-type of multipart to be 8000 Hz single channel.

2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/encoders/dirac/dirac.py:
	Add warnings about a bug that existed in schroenc before it was moved
	to gst-plugins-bad and released in 0.10.14.

	* flumotion/component/muxers/checks.py:
	Add warnings about the gdppay bug in gst-plugins-base 0.10.24.
	Closes #1341.

2009-09-07  Jan Urbanski  <jurbanski@flumotion.com>

	patch by: Xavier Queralt  <xqueralt@flumotion.com>

	* doc/man/flumotion-admin.1:
	* doc/man/flumotion-manager.1:
	* doc/man/flumotion-worker.1:
	Document missing command line options in manpages. Closes #1354.

2009-09-07  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/disker/disker.py:
	Prevent the disker from starting if the ical-schedule property is set
	and one of the required modules is missing.
	Original coding forgot to raise an exception after adding an Error
	message to the component state, which resulted in a sad disker, but one
	that was still disking.
	Fixes #809.

2009-09-07  Jan Urbanski  <jurbanski@flumotion.com>

	* data/make-dummy-cert:
	Remove bashism from make-dummy-cert (possibly it was just a typo). We
	don't translate the usage message for that script anyway.
	See Debian bug #530971.

2009-09-07  Julien Le Goff  <jlegoff@flumotion.com>

	reviewed by: Jan

	* flumotion/monitor/nagios/stream.py:
	Use the timeout option.
