@@ -1,3 +1,12 @@
+2009-09-09  Josep Joan Ribas  <jribas@flumotion.com>
+
+	reviewed by: Julien Le Goff
+
+	* flumotion/scenario/ondemand/wizard_gtk.py:
+	* flumotion/scenario/steps/ondemandstep.py:
+	Add a porter when creating an ondemand stream using the wizard.
+	Closes #994.
+
 2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>
 
 	* flumotion/admin/gtk/dialogs.py:
